--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,28 @@
-/*  your css code here. If applicable */
+.heading{
+  text-align:center;
+  width: 100vw;
+  height: 50px;
+  padding;30px;
+  background-color: grey;
+  color:white;
+}
+.about{
+  text-align: justify;
+}
+.website{
+  width:100px;
+  height: 50px;
+  background-color: green;
+  color: white;
+  border: 2px solid black;
+  border-radius: 5px;
+}
+.to-do{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.mustTry {
+  font-style:emphasize;
+}
+
