--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,10 @@
   justify-content: space-evenly;
   align-items: center;
 }
-.mustTry {
+.mustTry1 {
   font-style:bold;
+}
+.mustTry2 {
+  font-style:italic;
 }
 
