--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,6 @@
   justify-content: space-evenly;
   align-items: center;
 }
-.mustTry1 {
-  font-weight:bold;
+.mustTry {
+ font-style:strong;
 }
-.mustTry2 {
-  font-weight:italic;
-}
-
