--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,5 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-}
-.mustTry {
- font-style:strong;
+	font-style:italic;	
 }
